TN: Add authentication with Github Oauth2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,8 @@ spring.resources.chain.gzipped=true
 spring.resources.cache-period=600
 spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.strategy.content.paths=/**/*.js, /**/*.css, /**/*.png, /**/*.html
+
+client_id=bb3a0a77f7b1d2201b15
+client_secret=6f24785d100598e44d338fb56a4db71377890bbc
+github.authorize.url=https://github.com/login/oauth/authorize?client_id=${client_id}
+github.token.url=https://github.com/login/oauth/access_token?client_id=${client_id}&client_secret=${client_secret}
